<!-- ©2018-2019, Montaine BURGER -->
<!-- HES-SO Valais-Wallis, FIG -->


<resources>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- General strings of the app -->
    <string name="navigation_open">Open navigation drawer</string>
    <string name="navigation_close">Close navigation drawer</string>

    <!-- Values of the menu -->
    <string name="app_name">Ice Hockey for Dummies</string>
    <string name="gamecenter">Game Center</string>
    <string name="nationalleague">National League</string>
    <string name="swissleague">Swiss League</string>
    <string name="mysportsleague">MySports League</string>
    <string name="regioleague">Regio League / Elite</string>
    <string name="clubs">Clubs</string>
    <string name="settings">Settings</string>
    <string name="soon">Coming soon!</string>
    <string name="favorites">ALL YOUR FAVORITES</string>
    <string name="anyFav">You don\'t have any favorites yet.
        Add some directly from the club pages you support!</string>

    <!-- Club page values -->
    <string name="players">PLAYERS</string>
    <string name="player_number">#00</string>
    <string name="player_name">Player Player</string>
    <string name="club_deleted">This club has been deleted.</string>

    <!-- Player page values -->
    <string name="overview">OVERVIEW</string>
    <string name="details">PLAYER DETAILS</string>
    <string name="birthdate">Born in</string>
    <string name="birth_example">1992</string>
    <string name="position">Position</string>
    <string name="pos_example">Goalie</string>
    <string name="license">License</string>
    <string name="lice_example">CH</string>
    <string name="player_deleted">This player has been deleted.</string>

    <!-- Add a club page -->
    <string name="add">Add a new club</string>
    <string name="club_name">Name of the club</string>
    <string name="club_league">League of the club</string>
    <string name="choice_league">Choose a league</string>
    <string name="club_name_error">This name is too short: it must be at least 6 characters long.</string>
    <string-array name="leagues_array">
        <item>National League</item>
        <item>Swiss League</item>
        <item>MySports League</item>
        <item>Regio League / Elite</item>
    </string-array>
    <string name="club_created">The new club has been successfully created.</string>

    <!-- Add a player page -->
    <string name="add_player">Add a new player</string>
    <string name="informations">PLAYER INFORMATIONS</string>
    <string name="pfirstname">Firstname</string>
    <string name="plastname">Lastname</string>
    <string name="pbirthdate">Birthdate</string>
    <string name="pclub">Club</string>
    <string name="pnumber">Number</string>
    <string-array name="positions_array">
        <item>Winger</item>
        <item>Defense</item>
        <item>Goalie</item>
    </string-array>
    <string-array name="licenses_array">
        <item>CH</item>
        <item>Foreign</item>
    </string-array>
    <string name="plicense">License</string>
    <string name="pposition">Position</string>
    <string name="player_created">The new player has been successfully added.</string>
    <string name="player_name_error">This name is too short!</string>

    <!-- Edit player/club pages -->
    <string name="edit_player">Edit this player</string>
    <string name="edit_club">Edit this club</string>
    <string name="player_updated">This player has been successfully updated.</string>
    <string name="club_updated">This club has been successfully updated.</string>
    <string name="player_number_error">You must enter a number for this player.</string>
    <string name="modify_league">Modify the league of the club</string>

    <!-- Settings page -->
    <string name="delete_all">Delete all users\' data</string>
    <string name="copyright">©2018-2019, Montaine BURGER</string>
    <string name="uni">HES-SO Valais-Wallis, FIG</string>
    <string name="delete_all_success">All the users\' data have been successfully deleted.</string>
</resources>
